--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prepublish": "rm -rf ./lib; babel --out-dir ./lib ./src",
     "test": "npm run lint",
     "postpublish": "npm run deploy-example",
-    "build-example-js": "browserify ./example/main.js -o ./example/bundle.js -t [ babelify --presets [ es2015 react ] ]",
+    "build-example-js": "browserify ./example/main.js -o ./example/bundle.js -t [ babelify --presets [ @babel/preset-env @babel/preset-react ] ]",
     "build-example-css": "lessc ./example/main.less > ./example/main.css",
     "build-example": "npm run build-example-js; npm run build-example-css",
     "serve-example": "live-server ./example/ --no-browser --port=8081",
@@ -26,22 +26,25 @@
   },
   "homepage": "https://github.com/SamyPesse/react-nps-score#readme",
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
-    "eslint": "3.15.0",
-    "eslint-config-gitbook": "1.5.0",
-    "gh-pages": "^0.12.0",
-    "http-server": "^0.9.0",
-    "less": "^2.7.2",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
+    "eslint": "^5.12.0",
+    "eslint-config-gitbook": "^5.0.1",
+    "gh-pages": "^2.0.1",
+    "http-server": "^0.11.1",
+    "less": "^3.9.0",
     "live-server": "^1.2.0",
-    "mocha": "^3.2.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "mocha": "^5.2.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "dependencies": {
     "classnames": "^2.2.5"
