added missing packages

--- a/package.json
+++ b/package.json
@@ -38,12 +38,18 @@
     "browserify": "^16.2.3",
     "eslint": "^5.12.0",
     "eslint-config-gitbook": "^5.0.1",
+    "eslint-config-prettier": "^3.4.0",
     "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.3",
     "gh-pages": "^2.0.1",
     "http-server": "^0.11.1",
     "less": "^3.9.0",
     "live-server": "^1.2.0",
     "mocha": "^5.2.0",
+    "prettier": "^1.15.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
